# mycmake

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
csvs/: persion1.csv  persion2.csv  persion3.csv  persion4.csv  persion5.csv  persion6.csv  persion7.csv  persion8.csv  test.csv  testtest.csv
sound/: CMakeLists.txt  sound.cpp  sound.h
src/: CMakeLists.txt  main.cpp  train.cpp  train.h
src/plugins/types/: CMakeLists.txt  types  types.cpp  types.h
src/plugins/videos/: CMakeLists.txt  base_video.h  video  video.cpp  video.h
src/plugins/videos/mov/: mov.cpp  mov.h
src/plugins/videos/mp4/: mp4.cpp  mp4.h
